--- a/store_add.html
+++ b/store_add.html
@@ -45,7 +45,7 @@
 </body>
 <script src="https://cdn.bootcss.com/jquery/1.11.0/jquery.min.js"></script>
 <script>
-    var remote_url = "http://115.29.65.129:8080";
+    var remote_url = "http://www.hebiysg.cn/activity/";
     // var remote_url = "http://127.0.0.1:8080";
     function storeAdd() {
         var userName = $("#userName").val();
