--- a/store_manage.html
+++ b/store_manage.html
@@ -107,7 +107,7 @@
 <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
 <script>
     // var remote_url = "http://127.0.0.1:8080";
-    var remote_url = "http://115.29.65.129:8080";
+    var remote_url = "http://www.hebiysg.cn/activity/";
     var goodsId = getQueryString('i');
     var userId = getQueryString('uid');
     var vm = new Vue({
