--- a/store_manage.html
+++ b/store_manage.html
@@ -163,7 +163,7 @@
                     var timestamp = response.data.data.timestamp;
                     var signature = response.data.data.signature;
                     wx.config({
-                        debug: true,
+                        debug: false,
                         appId: appId,
                         timestamp: timestamp,
                         nonceStr: nonceStr,
