--- a/store_manage.html
+++ b/store_manage.html
@@ -73,7 +73,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div id="tab3" class="weui-tab__bd-item">
+                    <div id="tab3" class="weui-tab__bd-item">
                         <div class="weui-flex">
                             <div class="weui-flex__item"><input class="weui-input" type="text" name="phone"
                                     placeholder="手机号查询"></div>
@@ -93,7 +93,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </div>
